--- a/content/about.html
+++ b/content/about.html
@@ -7,16 +7,9 @@ slug: about
 
 
 
-<p>Hi there!</p>
-<p>Nick here. I spent about 5 years studying all things Biology &amp; Biotechnology and just because you can never run out of things to learn, on one day of the year 2016 I had the brilliant idea to take an online course on R programming.</p>
+<p>Nick here. I spent about 5 years studying all things Biology &amp; Biotechnology and just because you can never run out of things to learn, on one day of the year 2016 I had the brilliant idea to take an <a href="https://www.coursera.org/learn/r-programming?specialization=jhu-data-science">online course</a> on R programming.</p>
 <p>Next thing I know I was boarding the data science <a href="https://medium.com/p/the-future-of-data-science-14653afb52f5">hype train</a> with no intention of getting off.</p>
-<p>I wasn’t new to computer science or coding, yet my previous encounters with programming languages such as C or Python had been brief and unsuccessful. I was truly surprised by how quickly I was able to not just learn the basics of R, but</p>
-<p>become comfortable writing R code to</p>
-<p>but mostly to <strong>understand</strong> how R works.</p>
-<p>I give it to its more “scripting-language” nature or its</p>
-<p>it took me to get hooked up</p>
-<p>R things aside, I enjoy</p>
-<p>At the time I am writing this, about three years have passed since I created my first <strong>data.frame</strong> and as much as I wish there were some well-thought reasons behind why I decided to make this website, the honest answer it that it just <strong>felt right</strong>.</p>
-<p>I write this, about three years have passed by and I just figured it was time to put myself</p>
-<p>later, building my own website/portfolio (using R of course!)</p>
-<p>Since one can not live only of data science, I do occasionally enjoy other things such as making videos, listening to music and laughing at my phone while watching dog-related memes. Also, as the URL of this blog <em>may</em> suggest, I have a thing for websites that use TLDs in smart and funny way 😜.</p>
+<p>I wasn’t new to computer science or coding, yet my previous encounters with programming languages such as C or Python had been brief and unsuccessful. I was truly surprised by how quickly I was able not just to pick up the basics of the R language but become <em>comfortable</em> using R to solve problems and explore datasets (hint: built-in <a href="http://www.noamross.net/blog/2014/4/16/vectorization-in-r--why.html">vectorization</a> definitely helped).</p>
+<p>At the time I am writing this, about three years have passed since I created my first <em>data.frame</em> and as much as I wish there were some well-thought reasons behind why I decided to make this website, the honest answer it that it just <em>felt right</em>. I guess that after all lurking I eventually wanted to put everything I have learned to some use (building this blog was actually an “R project” itself, since it was developed within R Studio using the <code>blogdown</code> package.)</p>
+<p>Since one can not live only of data science things, I do occasionally enjoy other activities such as making videos, listening to music and laughing at my phone while watching dog-related memes. Also, as the URL of this blog <em>may</em> suggest, I have a thing for websites that use TLDs in smart and funny way 😜.</p>
+<p></br> </br> <span style="float:right; font-size:85%"><em>last updated january 19</em></span></p>
